# Backend/src/modules/authstaff/authstaff.controller.js
@@ -26,7 +26,7 @@ export const registerStaffcontroller = async (req, res) => {
     try {
         const { username, email, password, role_id } = req.body;
         const profile_image = req.file?.path || null;
-        const user = await registerStaff({ username, email, password, role_id, profile_image });
+        const user = await registerStaff({ username, email, password, role_id, profile_image }, req.user);
         res.status(201).json(user);
     } catch (error) {
         res.status(500).json({ error: error.message });
