# Backend/src/modules/permission/permission.route.js
@@ -4,7 +4,8 @@ import {
     getPermissionByIdController,
     assignPermissionController,
     removePermissionController,
-    getRolePermissionsController
+    getRolePermissionsController,
+    createPermissionController
 } from "./permission.controller.js";
 import { assignPermissionValidation } from "./validate/permission.validation.js";
 import { validateRequest } from "../../middlewares/validateRequest.js";
@@ -19,19 +20,44 @@ router.get("/",
     authMiddleware, getPermissionsController);
 
 
-
 router.get("/:id",
     /* #swagger.tags = ['Permissions'] */
     authMiddleware, getPermissionByIdController);
 
+router.post("/create",
+    /* #swagger.tags = ['Permissions'] */
+    /* #swagger.parameters['name'] = { in: 'body', required: true, type: 'string' } */
+    /* #swagger.parameters['permission_type'] = { in: 'body', required: true, type: 'string' } */
+    authMiddleware, can("CREATE_PERMISSION"), createPermissionController
+);
+
 router.post("/assign",
     /* #swagger.tags = ['Permissions'] */
-    authMiddleware, can("CREATE_PERMISSION"), assignPermissionValidation, validateRequest, assignPermissionController);
+    /* #swagger.requestBody = {
+            required: true,
+            content: {
+                "application/json": {
+                    schema: {
+                        type: "object",
+                        properties: {
+                            role_id: { type: "integer" },
+                            permission_id: { type: "integer" }
+                        }
+                    }
+                }
+            }
+        }
+    */
+    authMiddleware, can("ASSIGN_PERMISSION"), ...assignPermissionValidation, (req, res, next) => {
+        console.log("DEBUG /assign Body:", req.body);
+        console.log("DEBUG /assign Content-Type:", req.headers['content-type']);
+        next();
+    }, validateRequest, assignPermissionController);
 
 
 router.post("/remove",
     /* #swagger.tags = ['Permissions'] */
-    authMiddleware, can("DELETE_PERMISSION"), assignPermissionValidation, validateRequest, removePermissionController); // Reusing validation as fields are same
+    authMiddleware, can("REMOVE_PERMISSION"), assignPermissionValidation, validateRequest, removePermissionController); // Reusing validation as fields are same
 
 
 router.get("/role/:roleId",
@@ -40,7 +66,5 @@ router.get("/role/:roleId",
 
 
 
-router.post("/assigning",
-    /* #swagger.tags = ['Permissions'] */
-    authMiddleware, can("CREATE_PERMISSION"), assignPermissionValidation, validateRequest, assignPermissionController);    
+
 export default router;
